Implement Network Interface callbacks
